soal garis dan sudut

--- a/index.html
+++ b/index.html
@@ -1658,7 +1658,7 @@ function hasil6()
 						  <li><a href="#">Apa itu Garis Dan Sudut?</a></li>
 						  <li><a href="#">Pengertian Garis Dan Sudut</a></li>
 						  <li><a href="#">Contoh Latihan</a></li>
-						  <li><a href="#">Latihan Soal</a></li>
+						  <li><a href="#soalgarisdansudut">Latihan Soal</a></li>
 						  <li><a href="#">Garis Dan Sudut</a></li>
 						  <li><a href="#">Video Tentang Garis Dan Sudut</a></li>
 						</ul>
@@ -1668,9 +1668,31 @@ function hasil6()
 					
 					<div class="col-md-9">
 						<div id="whywhy">
-							<p>
-								aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf 
-							</p>
+
+<form name="chek9" method="post">
+		<div>
+			<h3 id="soalgarisdansudut">Soal Latihan</h3>
+			<pre>
+			<h4>1. Pada sebuah persegi, besarnya sudut yang dapat dibentuk adalah ...
+	<input type="radio" name="satu"  value="1" >  1       </input> <input type="radio" name="satu">  3 </input>
+	<input type="radio" name="satu" value="b"  >  2       </input> <input type="radio" name="satu" id="4">  4 </input>
+			
+			<br>2. Besar setiap sudut segi-20 beraturan adalah .... (UN '02)
+	<input type="radio" name="dua" value="a"  id="81 derajad">  18 derajad        </input> <input type="radio" name="dua" value="c" >  118 derajad</input>
+	<input type="radio" name="dua" value="12" >  81 derajad        </input> <input type="radio" name="dua" value="ff">  200 derajad</input>
+			
+			<br>3. pada gambar dibawah, besar sudut yang dibentuk oleh ruas garis OA dan OC adalah ...
+	<img  src="img/garis3.jpg">		
+	<input type="radio" name="tigaa" value="a"   > 30      </input>  <input type="radio" name="tigaa" value="c" id="45" > 45 </input>
+	<input type="radio" name="tigaa"    > 60       </input> <input type="radio" name="tigaa" value="8"> 75 </input>
+			
+			
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil7()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor" size="3" >
+		</div>
+	</form>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
