--- a/index.html
+++ b/index.html
@@ -1686,10 +1686,18 @@ function hasil6()
 	<input type="radio" name="tigaa" value="a"   > 30      </input>  <input type="radio" name="tigaa" value="c" id="45" > 45 </input>
 	<input type="radio" name="tigaa"    > 60       </input> <input type="radio" name="tigaa" value="8"> 75 </input>
 			
+			<br>4. pada gambar dibawah, segitiga BOC berpelurus dengan .....
+	<img  src="img/garis4.jpg">		
+	<input type="radio" name="tiga" value="a"    > BOA             </input> <input type="radio" name="tiga"> FOB</input>
+	<input type="radio" name="tiga" value="ss" id="COD"  > COD             </input> <input type="radio" name="tiga" value="8" > COF</input>
 			
+			<br>5.  pada gambar dibawah, Besar sudut BED adalah .....(EBTANAS '96)
+	<img  src="img/garis5.jpg">
+	<input type="radio" name="lima" value="a" > 60       </input>    <input type="radio" name="lima" id="120"> 120</input>
+	<input type="radio" name="lima" value="dd" > 100        </input> <input type="radio" name="lima" value="d" > 160</input>
 			</h4>
 			</pre>
-			<input type="button" onClick="hasil7()"  value="Check">  <input type="reset" value="reset">
+			<input type="button" onClick="hasil9()"  value="Check">  <input type="reset" value="reset">
 			Score : <input type="text" disabled name="skor" size="3" >
 		</div>
 	</form>
