js garis dan sudut

--- a/index.html
+++ b/index.html
@@ -1668,7 +1668,29 @@ function hasil6()
 					
 					<div class="col-md-9">
 						<div id="whywhy">
-
+<script language="javascript">
+function hasil9()
+{
+	var jlh=0;
+	
+	if(document.getElementById("4").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("81 derajad").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("60").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("COD").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("120").checked==true){
+	jlh++;}
+	
+	return document.chek9.skor.value=jlh;
+}
+</script>
 <form name="chek9" method="post">
 		<div>
 			<h3 id="soalgarisdansudut">Soal Latihan</h3>
@@ -1683,8 +1705,8 @@ function hasil6()
 			
 			<br>3. pada gambar dibawah, besar sudut yang dibentuk oleh ruas garis OA dan OC adalah ...
 	<img  src="img/garis3.jpg">		
-	<input type="radio" name="tigaa" value="a"   > 30      </input>  <input type="radio" name="tigaa" value="c" id="45" > 45 </input>
-	<input type="radio" name="tigaa"    > 60       </input> <input type="radio" name="tigaa" value="8"> 75 </input>
+	<input type="radio" name="tigaa" value="a"   > 30      </input>  <input type="radio" name="tigaa" value="c"  > 45 </input>
+	<input type="radio" name="tigaa"    id="60"> 60       </input> <input type="radio" name="tigaa" value="8"> 75 </input>
 			
 			<br>4. pada gambar dibawah, segitiga BOC berpelurus dengan .....
 	<img  src="img/garis4.jpg">		
