--- a/index.html
+++ b/index.html
@@ -1756,9 +1756,7 @@ function hasil9()
 						  <li><a href="#">Apa itu Relasi Dan Fungsi?</a></li>
 						  <li><a href="#">Pengertian Relasi Dan Fungsi</a></li>
 						  <li><a href="#">Contoh Latihan</a></li>
-						  <li><a href="#">Latihan Soal</a></li>
-						  <li><a href="#">Relasi Dan Fungis</a></li>
-						  <li><a href="#">Video Tentang Relasi Dan Fungsi</a></li>
+						  <li><a href="#soalrelasidanfungsi">Latihan Soal</a></li>
 						</ul>
 					  </div><!--/.well -->
 					  <button class="punch">Download E-Book</button>
@@ -1766,9 +1764,40 @@ function hasil9()
 					
 					<div class="col-md-9">
 						<div id="whywhy">
-							<p>
-								aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj
-							</p>
+
+<form name="chek10" method="post">
+		<div>
+			<h3 id="soalrelasidanfungsi">Soal Latihan</h3>
+			<pre>
+			<h4>1. Diketahui   = 3x -1 dengan daerah asal  , maka daerah hasilnya adalah ...
+	<input type="radio" name="satu"  value="1" >  {5,7,4,2,1,-2}         </input> <input type="radio" name="satu">  {-5,7,9,2,1,-2} </input>
+	<input type="radio" name="satu" value="b"  >  {10,7,4,2,-1,-2}       </input> <input type="radio" name="satu" id="{-10,-7,-5,-2,-1,2}">  {-10,-7,-5,-2,-1,2} </input>
+			
+			<br>2. 
+	<input type="radio" name="dua" value="a"  id="81 derajad">          </input> <input type="radio" name="dua" value="c" >  </input>
+	<input type="radio" name="dua" value="12" >         </input> <input type="radio" name="dua" value="ff">  </input>
+			
+			<br>3. 
+	<img  src="img/garis3.jpg">		
+	<input type="radio" name="tigaa" value="a"   >       </input>  <input type="radio" name="tigaa" value="c"  >  </input>
+	<input type="radio" name="tigaa"    id="60">        </input> <input type="radio" name="tigaa" value="8">  </input>
+			
+			<br>4. 
+	<img  src="img/garis4.jpg">		
+	<input type="radio" name="tiga" value="a"    >              </input> <input type="radio" name="tiga"> </input>
+	<input type="radio" name="tiga" value="ss" id="COD"  >              </input> <input type="radio" name="tiga" value="8" > </input>
+			
+			<br>5.  
+	<img  src="img/garis5.jpg">
+	<input type="radio" name="lima" value="a" >        </input>    <input type="radio" name="lima" id="120"> </input>
+	<input type="radio" name="lima" value="dd" >        </input> <input type="radio" name="lima" value="d" > </input>
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil10()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor" size="3" >
+		</div>
+	</form>
+
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
