relasi dan fungsi Soal

--- a/index.html
+++ b/index.html
@@ -1773,24 +1773,21 @@ function hasil9()
 	<input type="radio" name="satu"  value="1" >  {5,7,4,2,1,-2}         </input> <input type="radio" name="satu">  {-5,7,9,2,1,-2} </input>
 	<input type="radio" name="satu" value="b"  >  {10,7,4,2,-1,-2}       </input> <input type="radio" name="satu" id="{-10,-7,-5,-2,-1,2}">  {-10,-7,-5,-2,-1,2} </input>
 			
-			<br>2. 
-	<input type="radio" name="dua" value="a"  id="81 derajad">          </input> <input type="radio" name="dua" value="c" >  </input>
-	<input type="radio" name="dua" value="12" >         </input> <input type="radio" name="dua" value="ff">  </input>
+			<br>2. Jika garis 3y-2x=6  Sejajar dengan garis k, maka gradian garis k adalah…
+	<input type="radio" name="dua" value="a"  >3/2          </input> <input type="radio" name="dua" value="c" >-2/3  </input>
+	<input type="radio" name="dua" value="12" id="2/3" > 2/3        </input> <input type="radio" name="dua" value="ff">-3/2  </input>
 			
-			<br>3. 
-	<img  src="img/garis3.jpg">		
-	<input type="radio" name="tigaa" value="a"   >       </input>  <input type="radio" name="tigaa" value="c"  >  </input>
-	<input type="radio" name="tigaa"    id="60">        </input> <input type="radio" name="tigaa" value="8">  </input>
+			<br>3. garis 3x-5y-1=0  tegak lurus dengan garis l, maka gradien garis l adalah…	
+	<input type="radio" name="tigaa" value="a"   > 3/5       </input>  <input type="radio" name="tigaa" value="c" id="5/3"  > 5/3 </input>
+	<input type="radio" name="tigaa"    > -3/5       </input> <input type="radio" name="tigaa" value="8"> -5/3 </input>
 			
-			<br>4. 
-	<img  src="img/garis4.jpg">		
-	<input type="radio" name="tiga" value="a"    >              </input> <input type="radio" name="tiga"> </input>
-	<input type="radio" name="tiga" value="ss" id="COD"  >              </input> <input type="radio" name="tiga" value="8" > </input>
-			
-			<br>5.  
-	<img  src="img/garis5.jpg">
-	<input type="radio" name="lima" value="a" >        </input>    <input type="radio" name="lima" id="120"> </input>
-	<input type="radio" name="lima" value="dd" >        </input> <input type="radio" name="lima" value="d" > </input>
+			<br>4. Titik potong garis 3y - 2x + 13 = 0  dan x + 2y = -4 adalah…	
+	<input type="radio" name="tiga" value="a"  id="2,-3"  > 2,-3             </input> <input type="radio" name="tiga"> 2,3</input>
+	<input type="radio" name="tiga" value="ss" > -3,2             </input> <input type="radio" name="tiga" value="8" > 3,2</input>
+
+			<br>5. Persamaan garis yang melalui titik A(-3,5)  dan sejajar dengan garis 2x-y=3  adalah...
+	<input type="radio" name="lima" value="a" id="2x-y=11"> 2x-y=11       </input>    <input type="radio" name="lima" id="120"> x-2y=11</input>
+	<input type="radio" name="lima" value="dd" > 2x+y=-11        </input> <input type="radio" name="lima" value="d" > x+2y=11</input>
 			</h4>
 			</pre>
 			<input type="button" onClick="hasil10()"  value="Check">  <input type="reset" value="reset">
