--- a/index.html
+++ b/index.html
@@ -1422,6 +1422,7 @@ function hasil6()
                           <li><a href="#notasihimp">Notasi Himpunan</a></li>  
 						  <li><a href="#himp">Menyatakn Himpunan</a></li>
 						  <li><a href="#hbt">Himpunan Berhingga & Tak Hingga</a></li>
+						  <li>a href="soalhimpunan">Soal Latihan</a></li>
 						</ul>
 					  </div><!--/.well -->
 					  <a href="https://www.dropbox.com/s/xd9q8lc60fef8hf/MTK.%20KLS%207%20BAB%206.%20HIMPUNAN.pdf"><button class="punch">Download E-Book</button></a>
@@ -1625,6 +1626,35 @@ function hasil6()
 									</tr>
 								</thead>
 							</table>
+
++	<form name="chek6" method="post">
++		<div>
++			<h3 id="soalhimpunan">Soal Latihan</h3>
++			<pre>
++			<h4>1. Penderita flu burung maupun muntaber yang dirawat di rumah sakit sebanyak 86 orang,
++    35 orang menderita flu burung, dan 15 orang menderita flu burung juga muntaber.
++    Banyak penderita yang hanya menderita muntaber adalah . . .
++	<input type="radio" name="satu" id="5b(a + 2)"  >  20 orang       </input> <input type="radio" name="satu">  50 orang </input>
++	<input type="radio" name="satu" value="b"  >  36 orang       </input> <input type="radio" name="satu" id="51 orang">  51 orang </input>
++			
++			<br>2. Dalam sebuah kelas terdapat 20 siswa gemar kimia, 15 siswa gemar fisika, 8 siswa gemar
++	keduanya.	Banyak siswa dalam kelas adalah . . . .
++	<input type="radio" name="dua" value="a"          >  23 siswa        </input> <input type="radio" name="dua" value="c" id="27 siswa">  27 siswa</input>
++	<input type="radio" name="dua" value="12" >  28 siswa        </input> <input type="radio" name="dua" value="ff">  43 siswa</input>
++			
++			<br>3. Dalam satu kelas, 25 orang di antaranya senang badminton, 35 orang senang volli, 
++	dan 15 orang senang keduanya. Banyak siswa dalam kelas itu adalah . . ..
++	<input type="radio" name="tigaa" value="a"   >42 orang      </input> <input type="radio" name="tigaa" value="c" id="45 orang" >45 orang</input>
++	<input type="radio" name="tigaa"    >60 orang       </input> <input type="radio" name="tigaa" value="8">75 orang</input>
++			
++			
++			</h4>
++			</pre>
++			<input type="button" onClick="hasil6()"  value="Check">  <input type="reset" value="reset">
++			Score : <input type="text" disabled name="skor3" size="3" >
++		</div>
++	</form>					             
+
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
@@ -2104,7 +2134,7 @@ function hasil10()
 						  <li><a href="#ppositif">Bilangan Pangkat Positif</a></li>
 						  <li><a href="#pnegatif">Bilangan Pangkat Negatif</a></li>
 						  <li><a href="#pnol">Bilangan Pangkat Nol</a></li>
-						  <li><a href="#">Latihan Soal</a></li>
+						  <li><a href="#soalberpangkat">Latihan Soal</a></li>
 						  <li><a href="#">Bilangan Berpangkat</a></li>
 						  <li><a href="#">Video Tentang Bilangan Berpangkat</a></li>
 						</ul>
@@ -2212,6 +2242,38 @@ function hasil10()
 											</tr>
 										</tbody>
 									</table>
+<form name="chek9" method="post">
+		<div>
+			<h3 id="soalgarisdansudut">Soal Latihan</h3>
+			<pre>
+			<h4>1. Pada sebuah persegi, besarnya sudut yang dapat dibentuk adalah ...
+	<input type="radio" name="satu"  value="1" >  1       </input> <input type="radio" name="satu">  3 </input>
+	<input type="radio" name="satu" value="b"  >  2       </input> <input type="radio" name="satu" id="4">  4 </input>
+			
+			<br>2. Besar setiap sudut segi-20 beraturan adalah .... (UN '02)
+	<input type="radio" name="dua" value="a"  id="81 derajad">  18 derajad        </input> <input type="radio" name="dua" value="c" >  118 derajad</input>
+	<input type="radio" name="dua" value="12" >  81 derajad        </input> <input type="radio" name="dua" value="ff">  200 derajad</input>
+			
+			<br>3. pada gambar dibawah, besar sudut yang dibentuk oleh ruas garis OA dan OC adalah ...
+	<img  src="img/garis3.jpg">		
+	<input type="radio" name="tigaa" value="a"   > 30      </input>  <input type="radio" name="tigaa" value="c"  > 45 </input>
+	<input type="radio" name="tigaa"    id="60"> 60       </input> <input type="radio" name="tigaa" value="8"> 75 </input>
+			
+			<br>4. pada gambar dibawah, segitiga BOC berpelurus dengan .....
+	<img  src="img/garis4.jpg">		
+	<input type="radio" name="tiga" value="a"    > BOA             </input> <input type="radio" name="tiga"> FOB</input>
+	<input type="radio" name="tiga" value="ss" id="COD"  > COD             </input> <input type="radio" name="tiga" value="8" > COF</input>
+			
+			<br>5.  pada gambar dibawah, Besar sudut BED adalah .....(EBTANAS '96)
+	<img  src="img/garis5.jpg">
+	<input type="radio" name="lima" value="a" > 60       </input>    <input type="radio" name="lima" id="120"> 120</input>
+	<input type="radio" name="lima" value="dd" > 100        </input> <input type="radio" name="lima" value="d" > 160</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="hasil9()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor" size="3" >
+		</div>
+	</form>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
