soal baris dan deret

--- a/index.html
+++ b/index.html
@@ -2357,6 +2357,7 @@ function pangkat1()
 						  <li><a href="#barisan">Pengertian Barisan</a></li>
 						  <li><a href="#sukubaris">Pengertian Bilangan Dan Deret</a></li>
 						  <li><a href="#deret">Deret Aritmatika</a></li>
+						  <li><a href="#soalbarder">Soal Latihan</a></li>
 						</ul>
 					  </div><!--/.well -->
 					  <button class="punch">Download E-Book</button>
@@ -2499,6 +2500,34 @@ function pangkat1()
 								<p>Bila	suku-suku	pada	barisan	aritmetika	naik	dijumlahkan	maka
 								akan	terbentuk	<em><strong>deret aritmatika naik,</strong></em>	begitu	pula	bila	 suku-suku	pada	barisan	aritmetika	turun	dijumlahkan	maka	akan
 								terbentuk	<strong><em>deret aritmatika turun.</em></strong></p>
+
+<form name="chekbarder" method="post">
+		<div>
+			<h3 id="soalbarder">Soal Latihan</h3>
+			<pre>
+			<h4>1. diketahui barisan bilangan dengan suku ke-n U<sub>n</sub> = n<sup>2</sup> - 2n.
+Maka tentukan suke ke-5 dari barisan tersebut ....
+	<input type="radio" name="satu"  value="1"          >  12        </input>  <input type="radio" name="satu" > 14 </input>
+	<input type="radio" name="satu" value="b"           >  13        </input>  <input type="radio" name="satu" id="15"> 15 </input>		
+			<br>2. Diketahui barisan bilangan 4,7,12,19,...
+suku yang memiliki nilai 199 dari barisan tersebut ....
+	<input type="radio" name="dua" value="a"  >  12        </input> <input type="radio" name="dua" value="c" id="14">  14</input>
+	<input type="radio" name="dua" value="12" >  13        </input> <input type="radio" name="dua" value="ff">  15</input>			
+			<br>3. tentukan suku ke-8 dan ke-20 dari barisan berikut -3,2,7,12,...
+	<input type="radio" name="tigaa" value="a"  id="32 dan 92" > 32 dan 92         </input>   <input type="radio" name="tigaa" value="c"  > 92 dan 32 </input>
+	<input type="radio" name="tigaa"             > 30 dan 92         </input>   <input type="radio" name="tigaa" value="8"> 32 dan 90 </input>			 
+			<br>4. Carilah jumlah 100 suku pertama dari deret 2+4+6+8+10+...+n
+	<input type="radio" name="tiga" value="a"              > 10.000             </input> <input type="radio" name="tiga"> 20.100</input>
+	<input type="radio" name="tiga" value="ss" id="10.100" > 10.100             </input> <input type="radio" name="tiga" value="8" > 12.000</input>			
+			<br>5. Hitunglah jumlah semua bilangan asli kelipatan 3 kurang dari 100 ....
+	<input type="radio" name="lima" value="a"  id="1683"> 1683        </input>    <input type="radio" name="lima"           > 1900></input>
+	<input type="radio" name="lima" value="dd"          > 1700        </input>    <input type="radio" name="lima" value="d" > 1653</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="barder1()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor" size="3" >
+		</div>
+	</form>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
