--- a/index.html
+++ b/index.html
@@ -2500,6 +2500,29 @@ function pangkat1()
 								<p>Bila	suku-suku	pada	barisan	aritmetika	naik	dijumlahkan	maka
 								akan	terbentuk	<em><strong>deret aritmatika naik,</strong></em>	begitu	pula	bila	 suku-suku	pada	barisan	aritmetika	turun	dijumlahkan	maka	akan
 								terbentuk	<strong><em>deret aritmatika turun.</em></strong></p>
+<script language="javascript">
+function barder1()
+{
+	var jlh=0;
+	
+	if(document.getElementById("15").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("1400").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("32 dan 92").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("10100").checked==true){
+	jlh++;}
+	
+	if(document.getElementById("1683").checked==true){
+	jlh++;}
+	
+	return document.chekbarder.skor.value=jlh;
+}
+</script>
 
 <form name="chekbarder" method="post">
 		<div>
@@ -2511,16 +2534,16 @@ Maka tentukan suke ke-5 dari barisan tersebut ....
 	<input type="radio" name="satu" value="b"           >  13        </input>  <input type="radio" name="satu" id="15"> 15 </input>		
 			<br>2. Diketahui barisan bilangan 4,7,12,19,...
 suku yang memiliki nilai 199 dari barisan tersebut ....
-	<input type="radio" name="dua" value="a"  >  12        </input> <input type="radio" name="dua" value="c" id="14">  14</input>
+	<input type="radio" name="dua" value="a"  >  12        </input> <input type="radio" name="dua" value="c" id="1400">  14</input>
 	<input type="radio" name="dua" value="12" >  13        </input> <input type="radio" name="dua" value="ff">  15</input>			
 			<br>3. tentukan suku ke-8 dan ke-20 dari barisan berikut -3,2,7,12,...
 	<input type="radio" name="tigaa" value="a"  id="32 dan 92" > 32 dan 92         </input>   <input type="radio" name="tigaa" value="c"  > 92 dan 32 </input>
 	<input type="radio" name="tigaa"             > 30 dan 92         </input>   <input type="radio" name="tigaa" value="8"> 32 dan 90 </input>			 
 			<br>4. Carilah jumlah 100 suku pertama dari deret 2+4+6+8+10+...+n
 	<input type="radio" name="tiga" value="a"              > 10.000             </input> <input type="radio" name="tiga"> 20.100</input>
-	<input type="radio" name="tiga" value="ss" id="10.100" > 10.100             </input> <input type="radio" name="tiga" value="8" > 12.000</input>			
+	<input type="radio" name="tiga" value="ss" id="10100" > 10.100             </input> <input type="radio" name="tiga" value="8" > 12.000</input>			
 			<br>5. Hitunglah jumlah semua bilangan asli kelipatan 3 kurang dari 100 ....
-	<input type="radio" name="lima" value="a"  id="1683"> 1683        </input>    <input type="radio" name="lima"           > 1900></input>
+	<input type="radio" name="lima" value="a"  id="1683"> 1683        </input>    <input type="radio" name="lima"           > 1900</input>
 	<input type="radio" name="lima" value="dd"          > 1700        </input>    <input type="radio" name="lima" value="d" > 1653</input>
 			</h4>
 			</pre>
