--- a/index.html
+++ b/index.html
@@ -2038,9 +2038,7 @@ function hasil10()
 						  <li><a href="#">Apa itu Persamaan Dan Pertidaksamaan?</a></li>
 						  <li><a href="#">Pengertian Persamaan Dan Pertidaksamaan</a></li>
 						  <li><a href="#">Contoh Latihan</a></li>
-						  <li><a href="#">Latihan Soal</a></li>
-						  <li><a href="#">Persamaan Dan Pertidaksamaan</a></li>
-						  <li><a href="#">Video Tentang Persamaan Dan Pertidaksamaan</a></li>
+						  <li><a href="#soalpersamaan">Latihan Soal</a></li>
 						</ul>
 					  </div><!--/.well -->
 					  <button class="punch">Download E-Book</button>
@@ -2048,9 +2046,32 @@ function hasil10()
 					
 					<div class="col-md-9">
 						<div id="whywhy">
-							<p>
-								aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdjloremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf aksdjaksdj loremskdjfkasjf 
-							</p>
+							
+<form name="chekpersamaan" method="post">
+		<div>
+			<h3 id="soalpersamaan">Soal Latihan</h3>
+			<pre>
+			<h4>1. Nilai x dari persamaan 4x – 6 = 10 adalah…
+	<input type="radio" name="satu"  value="1"    id="p1"      >  4        </input>     <input type="radio" name="satu" > 6 </input>
+	<input type="radio" name="satu" value="b"           >  16        </input>  <input type="radio" name="satu" > 14 </input>		
+			<br>2. Nilai x dari persamaan 14 – 4x = 6x – 16 adalah …
+	<input type="radio" name="dua" value="a"  >  1        </input> <input type="radio" name="dua" value="c" id="p2">  3</input>
+	<input type="radio" name="dua" value="12" >  2        </input> <input type="radio" name="dua" value="ff">  4</input>			
+			<br>3. Nilai x dari persamaan 2x + 1 1 = 1x – 2 1 adalah …
+	<input type="radio" name="tigaa" value="a"    >  4         </input>   <input type="radio" name="tigaa" value="c"  >  3 </input>
+	<input type="radio" name="tigaa" id="p3"      > -4         </input>   <input type="radio" name="tigaa" value="8"  > -3 </input>			 
+			<br>4. Penyelesaian dari pertidaksamaan 8x – 3 < 6x + 3 adalah …
+	<input type="radio" name="tiga" value="a"   > x<3 atau x>4             </input> <input type="radio" name="tiga" id="p4"   > x<3</input>
+	<input type="radio" name="tiga" value="ss"  > x<=3                     </input> <input type="radio" name="tiga" value="8" > x>3</input>			
+			<br>5. Penyelesaian dari pertidaksamaan 2x + 4 ≤ 4x – 8 adalah …
+	<input type="radio" name="lima" value="a"  id="p5"  > x<=6        </input>    <input type="radio" name="lima"           > x<6</input>
+	<input type="radio" name="lima" value="dd"          > x>=6        </input>    <input type="radio" name="lima" value="d" > x>6</input>
+			</h4>
+			</pre>
+			<input type="button" onClick="persamaan1()"  value="Check">  <input type="reset" value="reset">
+			Score : <input type="text" disabled name="skor" size="3" >
+		</div>
+	</form>
 						</div>
 						<div class="komen">
 							<hr class="featurette-divider garis">
